--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
             <h2>FirstName LastName</h2>
+            <h2>prajwal G C</h2>
             <p>City,Country.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
